--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Conoce Guadalajara</title>
+		<title>Segunda pa ver si cambia</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<h1><a href="index.html">Guadalajara</a></h1>
+							<h1><a href="index.html">Otra cosa papu</a></h1>
 							<p>la perla de occidente</p>
 						</div>
 
@@ -27,7 +27,7 @@
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Inicio</a></li>
-								<li class="current"><a href="#">Guadalajara</a>
+								<li class="current"><a href="#">GDL</a>
 									<ul>
 										<li><a href="#">Centro Historico</a></li>
 										<li><a href="#">San Juan de Dios</a></li>
