--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 					<!-- Logo -->
 						<div id="logo">
 							<h1><a href="index.html">Otra cosa papu</a></h1>
-							<p>la perla de occidente</p>
+							<p>palabras nuevas
+							</p>
 						</div>
 
 					<!-- Nav -->
